# MTGGraph

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html  pyproject.toml
.claude/: settings.json
.github/workflows/: update-meta.yml
computed/: graph.json
knowledge/: META.md
knowledge/archetypes/: 4c-omnath.md  affinity-aggro.md  affinity.md  amulet-titan.md  azorius-blink.md  azorius-control.md  bant-control.md  bant-ritual.md  birthing-ritual.md  boros-energy.md  boros-ponza.md  boros-taxes.md  broodscale-combo.md  burn.md  cosmogoyf-fling.md  devoted-combo.md  dimir-control.md  dimir-frog.md  domain-zoo.md  dredge.md  eldrazi-breach.md  eldrazi-ramp.md  eldrazi-tron.md  elves.md  esper-blink.md  esper-control.md  esper-midrange.md  four-color-shadow.md  goryo-reanimator.md  goryo.md  grixis-control.md  grixis-reanimator.md  grixis-shadow.md  gruul-belcher.md  hammer-time.md  hardened-scales.md  hollow-one.md  indomitable-creativity.md  izzet-artifacts.md  izzet-cori-steel.md  (+259 more)
knowledge/cards/: aang-swift-savior.md  abandon-attachments.md  abhorrent-oculus.md  abigale-eloquent-first-year.md  abrade.md  aether-vial.md  (+1309 more)
mtggraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: __main__.py  archetype_manager.py  batch_ingest.py  compute.py  fetch_tournament.py  ingest.py  llm.py  parser.py  profile_cache.py  rename_archetype.py  scryfall.py  similarity.py  update_meta.py
tests/: test_archetype_manager.py  test_compute.py  test_ingest.py  test_integration.py  test_parser.py  test_scryfall.py  test_similarity.py
web/: graph.js  index.html  style.css
(+5879 files in other folders)
